<resources>
    <string name="app_name" translatable="false">Weather Whenever</string>
    <string name="welcome_text">Hello World!</string>
    <string name="button_forecast">W</string>
    <string name="cities_forecasts_title">Cities forecasts</string>
    <string name="preference_file_key">private_prefs</string>
    <string name="selected_city_index_prefs_key">last_selected_city</string>
    <string name="tip_of_the_day">You always be prepared</string>
    <string name="title_activity_forecast">Reliable forecast</string>

    <string-array name="city_list">
        <item>Rio</item>
        <item>Tula</item>
        <item>Minsk</item>
        <item>Washington</item>
        <item>Berlin</item>
        <item>Antverpen</item>
        <item>Venice</item>
    </string-array>

    <string-array name="forecasts_hardcoded_list">
        <item>Rainy</item>
        <item>Snowhy</item>
        <item>Stormy</item>
        <item>Sunny</item>
        <item>Zombie</item>
        <item>Cloudy</item>
        <item>Winy</item>
    </string-array>

    <string-array name="todo_actions_list">
        <item>Take an umbrella</item>
        <item>Wear a hat</item>
        <item>Catch the umbrella, hold the hat</item>
        <item>Wear glasses, take off the hat</item>
        <item>Load the gun</item>
        <item>Take off the glasses</item>
        <item>Drink more wine</item>
    </string-array>

    <string name="tell_the_friend">Tell the friend</string>
    <string name="owm_switch_label">Open Weather Map</string>
    <string name="fids_switch_label">Finger in da sky</string>
    <string name="hint_cityname">city name</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather Whenever</string>
    <string name="nav_header_subtitle">gu practice project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_temp_42">-42</string>
    <string name="find_city_activity_title">Find a city</string>
    <string name="find_city_button">Find a city</string>
    <string name="search_city_prompt_description">It looks like no favourite cities yet. You need to do search a city first.</string>
    <string name="search_city_prompt_title">Search city</string>
    <string name="temp_scale_celsius">˚C</string>
    <string name="snack_text_updating_weather">Updating weather</string>
    <string name="prompt_update_description">You\'re looking at weather info received more than an hour ago.  Touch the update button to update weather and forecast info.</string>
    <string name="prompt_update_title">It\'s a good time to update data from the web.</string>
    <integer name="accent_start_update_description">73</integer>
    <integer name="accent_end_update_description">79</integer>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="placeholder_no_data">No data</string>

</resources>
