<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selected_city_name"
        android:text="@string/cities_forecasts_title"
        android:textSize="25sp"/>

    <TextView
        android:layout_marginTop="25sp"
        android:id="@+id/textview_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="25sp"/>

    <TextView
        android:layout_marginTop="25sp"
        android:id="@+id/textview_tipoftheday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_of_the_day"
        android:textSize="25sp"/>

    <Button
        android:layout_margin="50sp"
        android:id="@+id/button_get_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/tell_the_friend"/>

</LinearLayout>
